Added style sheets

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Test</title>
 		<meta charset="utf-8" />
-		<link href="../lunil.css" type="text/css" rel="stylesheet" />
+		<link href="lunil.css" type="text/css" rel="stylesheet" />
 		<style>
 			.box a{
 				display:inline;
