--- a/index.html
+++ b/index.html
@@ -29,18 +29,13 @@
 			<h4>Navigation</h4>
 			<ul class="dd">
 			<li><a href="#catdoc.js" onclick="a(this);">Catdoc</a></li>
-			<li><a href="#1.n" onclick="a(this);">1</a>
-			<li><a href="#2.n" onclick="a(this);">2</a></li>
-			<li><a href="#3.n" onclick="a(this);">3</a></li>
-			<li><a href="#test.html" onclick="a(this);">Test</a></li>
+			<li><a href="#testdoc.cdo" onclick="a(this);">Test</a></li>
 			<li><a href="#wall.quotes" onclick="a(this);">Wall</a></li>
-			<li><a href="#morus_test.morus" onclick="a(this);">OpenWorldDungeonCrawler</a></li>
-			<li><a href="#testdoc.cdo" onclick="a(this);">Testdoc</a></li>
-			<li><a href="https://www.nmke.de">NMKE</a></li>
+			<li><a href="https://github.com">External website</a></li>
 		</ul></nav>
 		<div id="box" class="i">
 			<article id="main-article">
-				Bla
+				.
 			</article>
 		</div>
 		<div id="catbox" class="i">
